@@ -40,6 +40,7 @@ Release 0.19.0 - Unreleased
    HBASE-946   Row with 55k deletes timesout scanner lease
    HBASE-950   HTable.commit no longer works with existing RowLocks though it's still in API
    HBASE-728   Support for HLog appends
+   HBASE-952   Deadlock in HRegion.batchUpdate
 
   IMPROVEMENTS
    HBASE-901   Add a limit to key length, check key and value length on client side
